--- a/assets/scss/_typorgraphy.scss
+++ b/assets/scss/_typorgraphy.scss
@@ -1,10 +1,26 @@
 /// font palette
 $fonts: (
   title1: (
-    font-size: 1.5rem,
-    line-height: 1.34,
+    font-size: 6rem,
+    line-height: 1.167,
   ),
   title2: (
+    font-size: 3.75rem,
+    line-height: 1.2,
+  ),
+  title3: (
+    font-size: 3rem,
+    line-height: 1.167,
+  ),
+  title4: (
+    font-size: 2.125rem,
+    line-height: 1.235,
+  ),
+  title5: (
+    font-size: 1.5rem,
+    line-height: 1.334,
+  ),
+  title6: (
     font-size: 1.25rem,
     line-height: 1.6,
   ),
